[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-vigil"
version = "1.0.0"
description = "Arc Vigil — neural network training stability monitor. Detect, attribute, intervene."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Hannah Nine", email = "9hannahnine@gmail.com"}
]
keywords = ["machine learning", "neural network", "training stability", "instability detection", "model monitoring", "information geometry", "ai safety"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=1.10",
  "numpy>=1.20",
]

[project.urls]
Homepage = "https://bendexgeometry.com/vigil"
Repository = "https://github.com/9hannahnine-jpg/bendex-vigil"

[tool.setuptools.packages.find]
include = ["arc_vigil*"]
